--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,18 @@
 			<version>3.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>dnsjava</groupId>
+			<artifactId>dnsjava</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
