--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ com:
 
 spring:
   datasource:
-    url: jdbc:mysql://172.16.172.3:3306/logindemo?useUnicode=true
+    url: jdbc:mysql://localhost:3306/logindemo?useUnicode=true
     username: ocean
     password: sobey
     type: com.alibaba.druid.pool.DruidDataSource
@@ -30,3 +30,11 @@ spring:
     filters: stat,wall,slf4j
     # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+  mail:
+    host: smtp.qiye.163.com #邮箱服务器地址
+    username: xxx@oo.com #用户名
+    password: xxyyooo    #密码
+    default-encoding: UTF-8
+
+mail.fromMail.addr: xxx@oo.com
