--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,23 @@ com:
   peng:
     name: Yk
     want: home
+    fromMailAddr: 644710708@qq.com
+
+server:
+  #端口
+  port: 80
+  #上下文路径
+  contextPath: /logindemo
+  #内置tomcat编码
+  tomcat:
+    uriEncoding: utf-8
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/logindemo?useUnicode=true
     username: ocean
     password: sobey
+
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     initialSize: 1
@@ -32,9 +43,14 @@ spring:
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
   mail:
-    host: smtp.qiye.163.com #邮箱服务器地址
-    username: xxx@oo.com #用户名
-    password: xxyyooo    #密码
+    host: smtp.qq.com #邮箱服务器地址
+    username: 644710708@qq.com #用户名
+    password: xkwadbnymuyzbbeb    #密码
+    properties.mail.smtp.auth: true
+    properties.mail.smtp.starttls.enable: true
+    properties.mail.smtp.socketFactory.port: 465
+    properties.mail.smtp.socketFactory.class: javax.net.ssl.SSLSocketFactory
+    properties.mail.smtp.socketFactory.fallback: false
     default-encoding: UTF-8
+    port: 465
 
-mail.fromMail.addr: xxx@oo.com
