--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,15 @@ server:
   #端口
   port: 80
   #上下文路径
-  contextPath: /logindemo
+  contextPath: /login
   #内置tomcat编码
   tomcat:
     uriEncoding: utf-8
 
 spring:
+  http:
+    converters:
+      preferred-json-mapper: fastjson
   datasource:
     url: jdbc:mysql://localhost:3306/logindemo?useUnicode=true
     username: ocean
