--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,9 +19,8 @@ spring:
       preferred-json-mapper: fastjson
   datasource:
     url: jdbc:mysql://localhost:3306/logindemo?useUnicode=true
-    username: ocean
-    password: sobey
-
+    username: root
+    password: admin
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     initialSize: 1
