--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
 			<version>2.1.7</version>
 		</dependency>
 
+		<!--<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>1.4.0.RELEASE</version>
+		</dependency>-->
+
 	</dependencies>
 
 	<build>
