--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<!-- 用于注册中心访问账号认证 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!--swagger2-->
 		<dependency>
 			<groupId>com.didispace</groupId>
@@ -134,11 +144,11 @@
 			<version>2.1.7</version>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 			<version>1.4.0.RELEASE</version>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
