--- a/pom.xml
+++ b/pom.xml
@@ -144,11 +144,11 @@
 			<version>2.1.7</version>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 			<version>1.4.0.RELEASE</version>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
