--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,7 +56,7 @@ spring:
 
 ###################  mybatis-plus配置  ###################
 mybatis-plus:
-  mapper-locations: classpath:/mapper/*Mapper.xml
+  mapper-locations: classpath*:/com/peng/mapper/*Mapper.xml
   #model类路径
   typeAliasesPackage: com.peng.model
   #自定义字段类型转换路径
